--- a/src/componentes/Cabecalho/Cabecalho.module.scss
+++ b/src/componentes/Cabecalho/Cabecalho.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 .cabecalho {
     display: flex;
     justify-content: space-between;
@@ -36,6 +38,8 @@
       border: none;
       background-color: transparent;
       outline: 0;
+      color: $cor-do-texto;
+      font-family: $fonte-normal;
   
       &::placeholder {
         font-size: 1rem;
