--- a/src/componentes/Menu/Menu.module.scss
+++ b/src/componentes/Menu/Menu.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 .menu {
     width: 18%;
   
@@ -36,6 +38,8 @@
       text-decoration: none;
       font-size: 1.125rem;
       color: #d9d9d9;
-      font-family: "GandhiSansRegular"
+     
+      font-family: $fonte-normal;
+      color: $cor-do-texto;
     }
   }
